# ComputerVisionPack

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
data/graph/detection/face/onnx/: retina_resnet50_sml_480x640.onnx
lib/: main.cpp  main_video.cpp
lib/exec/image_processing/: cartonify_exec.cpp
src/: common.h
src/alg/: detection_alg.cpp  detection_alg.h  i_alg.h
src/common/: common.h  imgs_conversion.h  imgs_manipulation.h
src/dl_models/: base_model.h  models_factory.cpp  models_factory.h
src/dl_models/detection/: anchor_ssd.cpp  anchor_ssd.h  base_detector.cpp  base_detector.h
src/entities/: box.cpp  box.h
src/gui/: capture_thread.cpp  capture_thread.h  edit_panel.cpp  edit_panel.h  image_viewer.cpp  image_viewer.h  video_viewer.cpp  video_viewer.h
src/gui/plugins/editor/: cartonify_plugin.cpp  cartonify_plugin.h  editor_plugin_interface.h  erode_plugin.cpp  erode_plugin.h  faces_detection_plugin.cpp  faces_detection_plugin.h
src/nn/: inference_wrapper.cpp  inference_wrapper.h  onnx_runtime_wrapper.cpp  onnx_runtime_wrapper.h  preprocess_image.h
src/tool/: geometry.h
src/tool/creative/: cartonify.h
src/tool/detection/: prior_box.h
src/tool/filter/: fast_repeat_bilateral.h
src/tool/image/: imgs_conversion.h  imgs_manipulation.h  smart_pad_resize.cpp  smart_pad_resize.h
src/tool/image/filter/: fast_repeat_bilateral.h
src/tool/image/visualization/: boxes_drawer.cpp  boxes_drawer.h  color_map.cpp  color_map.h
src/utils/creative/: cartonify.h
src/utils/detection/: box_utils.h  non_maximum_supression.cpp  non_maximum_supression.h
